--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <html>
     <head>
+        <!-- titulo -->
         <title>shop</title>
         <link rel="stylesheet" href="assents/style.css">
     </head>
 
     <body>
+        <section>
+            <h1>shop</h1>
+            <p >
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ipsa dolore incidunt, nesciunt deleniti
+            maxime iure consequatur labore corporis facere! Amet corrupti rem hic! Porro quas optio molestias repellat eius.
+            </p>
 
+        </section>
+
+        <section>
+
+
+        </section>
     </body>
 </html>
